--- a/ShoppingApp/Pages/CartPage.xaml
+++ b/ShoppingApp/Pages/CartPage.xaml
@@ -2,11 +2,21 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShoppingApp.Pages.CartPage"
-             Title="CartPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Cart">
+
+    <ContentPage.Content>
+        <ListView x:Name="CartListView" ItemsSource="{Binding CartItems}" HasUnevenRows="True">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout Padding="10">
+                            <!-- Customize the appearance of each cart item here -->
+                            <Label Text="{Binding ItemsName}" FontSize="Medium" FontAttributes="Bold"/>
+                            <Label Text="{Binding ItemsPrice}" FontSize="Small"/>
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </ContentPage.Content>
 </ContentPage>
